--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!doctype html>
 <html>
-  <head>
-    <title>This is the title of the webpage!</title>
+  <head style="font-family:roboto; text-align:center">
+	<title>Necessary Detective</title>
   </head>
-  <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-	<a href=".\Necessary Detective.html">Click to open a folder</a>
+  <body style="font-family:roboto; text-align:left">
+	<h1 style="text-align:center">Welcome to Necessary Detective linktree!</h1>
+	<p>If you are not here from GitHub, I <strong>recommend</strong> you to check my repo for basic story outline and the other need-to-know stuff.
+	<p><a href="https://github.com/MaFIaTH/Necessary-Detective-1">Check out my GitHub repo!</a></p>
+	<br>
+	<h2>Links to E-book</h2>
+	<p><a href=".\Necessary Detective.html">Click to read Necessary Detective 1 (WIP)</a></p>
+	<br><br><br><br><br>
+	<p style="font-size:70%">I just learned basic HTML to make this webpage lol.</p>
   </body>
 </html>
