--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<p><a href="https://github.com/MaFIaTH/Necessary-Detective">Check out my GitHub repo!</a></p>
 	<br>
 	<h2>Links to E-book</h2>
-	<p><a href=".\Necessary Detective.html">Click to read Necessary Detective 1 (WIP)</a></p>
+	<p><a href=".\Necessary Detective.html">Click to read Necessary Detective 1 (WIP) (0.0.0.1)</a></p>
 	<br><br><br><br><br>
 	<p style="font-size:70%">I just learned basic HTML to make this webpage lol.</p>
   </body>
